--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Eleanor's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-2">
-                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Eleanor" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover">
+                <img src="image9.png" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover">
                 <h2 class="text-3xl font-bold text-white mb-3">Eleanor's Quiet Revolution</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     Overwhelmed by a constant hum of anxiety and the relentless pressure of deadlines, project manager Eleanor felt her world losing its color. See how she traded stress for strategy and rediscovered her creative problem-solving abilities.
@@ -95,7 +95,7 @@
 
             <!-- Joe's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
-                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Joe" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
+                <img src="pic 8.png" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
                 <h2 class="text-3xl font-bold text-white mb-3">The Day the Colors Came Back</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     For graphic designer Joe, creative burnout had turned his vibrant world grayscale. Faced with blank screens and looming deadlines, he'd lost the joy in his work. Discover how he lifted the fog and got back into his creative flow.
