--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
                 <a href="#">microDOS(2)</a>
             </div>
             <div class="hidden md:flex space-x-8">
-                <a href="#" class="text-gray-300 hover:text-indigo-400 transition-colors">Home</a>
+                <a href="https://microdos2.github.io/UPDATE2/" class="text-gray-300 hover:text-indigo-400 transition-colors">Home</a>
                 <a href="#" class="text-indigo-400 font-semibold">Experiences</a>
-                <a href="#" class="text-gray-300 hover:text-indigo-400 transition-colors">Science</a>
-                <a href="#" class="text-gray-300 hover:text-indigo-400 transition-colors">FAQ</a>
             </div>
             <button class="md:hidden text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -95,7 +93,7 @@
 
             <!-- Joe's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
-                <img src="pic 8.png" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
+                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Joe" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
                 <h2 class="text-3xl font-bold text-white mb-3">The Day the Colors Came Back</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     For graphic designer Joe, creative burnout had turned his vibrant world grayscale. Faced with blank screens and looming deadlines, he'd lost the joy in his work. Discover how he lifted the fog and got back into his creative flow.
