--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Experiences - Real Stories, Real Clarity</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="pic 8.png"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
