--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Experiences - Real Stories, Real Clarity</title>
-    <script src="pic 8.png"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -93,7 +93,7 @@
 
             <!-- Joe's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
-                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Joe" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
+                <img src="pic 8.png" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
                 <h2 class="text-3xl font-bold text-white mb-3">The Day the Colors Came Back</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     For graphic designer Joe, creative burnout had turned his vibrant world grayscale. Faced with blank screens and looming deadlines, he'd lost the joy in his work. Discover how he lifted the fog and got back into his creative flow.
@@ -117,4 +117,5 @@
 
 </body>
 </html>
+
 
