--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         .fade-in-delay-1 { animation-delay: 0.2s; }
         .fade-in-delay-2 { animation-delay: 0.4s; }
         .fade-in-delay-3 { animation-delay: 0.6s; }
+        .fade-in-delay-4 { animation-delay: 0.8s; } /* Added for Jalen's card */
     </style>
 </head>
 <body class="text-gray-300">
@@ -74,11 +75,26 @@
         </header>
 
         <!-- Stories Grid -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12">
+        <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8 md:gap-12">
+
+            <!-- Jalen's Story Card -->
+            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-2">
+                <img src="image9.png" alt="Portrait of Jalen" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <h2 class="text-3xl font-bold text-white mb-3">Jalen's Quiet Score</h2>
+                <p class="text-gray-400 mb-6 flex-grow">
+                    A professional basketball player, Jalen was buckling under the crushing weight of performance anxiety. The roar of the crowd and the sting of every missed shot were deafening. He found a way to quiet the noise and rediscover the joy and intuitive grace in his game.
+                </p>
+                <blockquote class="border-l-4 border-indigo-500 pl-4 text-gray-300 italic mb-6">
+                    "It had quieted the noise, allowing him to hear his own instincts, to trust his own talent."
+                </blockquote>
+                <a href="https://microdos2.github.io/Jalen-s-Story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                    Read Jalen's Full Story
+                </a>
+            </div>
 
             <!-- Eleanor's Story Card -->
-            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-2">
-                <img src="image9.png" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover">
+            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
+                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Eleanor" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Eleanor's Quiet Revolution</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     Overwhelmed by a constant hum of anxiety and the relentless pressure of deadlines, project manager Eleanor felt her world losing its color. See how she traded stress for strategy and rediscovered her creative problem-solving abilities.
@@ -92,8 +108,8 @@
             </div>
 
             <!-- Joe's Story Card -->
-            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
-                <img src="pic 8.png" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover">
+            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-4">
+                <img src="https://placehold.co/600x400/1f2937/9ca3af?text=Joe" alt="Portrait of Joe" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">The Day the Colors Came Back</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     For graphic designer Joe, creative burnout had turned his vibrant world grayscale. Faced with blank screens and looming deadlines, he'd lost the joy in his work. Discover how he lifted the fog and got back into his creative flow.
@@ -117,5 +133,3 @@
 
 </body>
 </html>
-
-
