--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <!-- Jalen's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-2">
-                <img src="image9.png" alt="Portrait of Jalen" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <img src="image9j.png" alt="Portrait of Jalen" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Jalen's Quiet Score</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     A professional basketball player, Jalen was buckling under the crushing weight of performance anxiety. The roar of the crowd and the sting of every missed shot were deafening. He found a way to quiet the noise and rediscover the joy and intuitive grace in his game.
@@ -94,7 +94,7 @@
 
             <!-- Eleanor's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-3">
-                <img src="pic 8.png" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <img src="elanor.png" alt="Portrait of Eleanor" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Eleanor's Quiet Revolution</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     Overwhelmed by a constant hum of anxiety and the relentless pressure of deadlines, project manager Eleanor felt her world losing its color. See how she traded stress for strategy and rediscovered her creative problem-solving abilities.
@@ -133,4 +133,5 @@
 
 </body>
 </html>
+
 
