--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         .fade-in-delay-1 { animation-delay: 0.2s; }
         .fade-in-delay-2 { animation-delay: 0.4s; }
         .fade-in-delay-3 { animation-delay: 0.6s; }
-        .fade-in-delay-4 { animation-delay: 0.8s; } /* Added for Jalen's card */
+        .fade-in-delay-4 { animation-delay: 0.8s; }
+        .fade-in-delay-5 { animation-delay: 1.0s; } /* Added for Lena's card */
     </style>
 </head>
 <body class="text-gray-300">
@@ -121,6 +122,21 @@
                     Read Joe's Full Story
                 </a>
             </div>
+            
+            <!-- Lena's Story Card -->
+            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-5">
+                <img src="imaglena.png" alt="Portrait of Lena" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <h2 class="text-3xl font-bold text-white mb-3">Lena's Luminous Code</h2>
+                <p class="text-gray-400 mb-6 flex-grow">
+                    As a software developer, Lena's world was one of logic and precision. But the once-exciting challenge of coding had become a monotonous routine, leaving her feeling disconnected and uninspired. She needed to reboot her own system to find the spark that turned simple code into elegant solutions.
+                </p>
+                <blockquote class="border-l-4 border-indigo-500 pl-4 text-gray-300 italic mb-6">
+                    "The lines of code began to feel less like rigid instructions and more like a conversation. I was crafting an experience."
+                </blockquote>
+                <a href="https://microdos2.github.io/Lenas-Story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                    Read Lena's Full Story
+                </a>
+            </div>
 
         </div>
 
@@ -133,5 +149,3 @@
 
 </body>
 </html>
-
-
