--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             
             <!-- Lena's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-5">
-                <img src="imaglena.png" alt="Portrait of Lena" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <img src="imagelena.png" alt="Portrait of Lena" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Lena's Luminous Code</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     As a software developer, Lena's world was one of logic and precision. But the once-exciting challenge of coding had become a monotonous routine, leaving her feeling disconnected and uninspired. She needed to reboot her own system to find the spark that turned simple code into elegant solutions.
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
