--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <blockquote class="border-l-4 border-indigo-500 pl-4 text-gray-300 italic mb-6">
                     "The lines of code began to feel less like rigid instructions and more like a conversation. I was crafting an experience."
                 </blockquote>
-                <a href="https://microdos2.github.io/Lenas-Story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                <a href="https://microdos2.github.io/lenas-story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
                     Read Lena's Full Story
                 </a>
             </div>
@@ -149,4 +149,3 @@
 
 </body>
 </html>
-
