--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                 <img src="imagelena.png" alt="Portrait of Lena" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Lena's Luminous Code</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
-                    As a software developer, Lena's world was one of logic and precision. But the once-exciting challenge of coding had become a monotonous routine, leaving her feeling disconnected and uninspired. She needed to reboot her own system to find the spark that turned simple code into elegant solutions.
+                    Dr. Lena Kwon, a brilliant computational biologist, hit a wall, her search for a hidden genomic signal stalled for months. Facing creative burnout, she embarked on a personal, data-driven experiment with microdosing. This new protocol helped her break through the noise, leading to a fresh perspective and the breakthrough she had been relentlessly pursuing.
                 </p>
                 <blockquote class="border-l-4 border-indigo-500 pl-4 text-gray-300 italic mb-6">
-                    "The lines of code began to feel less like rigid instructions and more like a conversation. I was crafting an experience."
+                    "The protocol correlated with a period of increased creativity... culminating in a research breakthrough. Data point of one."
                 </blockquote>
                 <a href="https://microdos2.github.io/lenas-story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
                     Read Lena's Full Story
