--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 
         </div>
 
+        <!-- CTA Section -->
+        <div class="text-center mt-20">
+            <a href="https://microdos2.github.io/UPDATE2/#pricing" target="_blank" class="inline-block bg-indigo-600 text-white font-bold text-lg py-4 px-10 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                Start Your Trial Today
+            </a>
+        </div>
+
     </div>
 
     <!-- Footer -->
