--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         .fade-in-delay-2 { animation-delay: 0.4s; }
         .fade-in-delay-3 { animation-delay: 0.6s; }
         .fade-in-delay-4 { animation-delay: 0.8s; }
-        .fade-in-delay-5 { animation-delay: 1.0s; } /* Added for Lena's card */
+        .fade-in-delay-5 { animation-delay: 1.0s; }
+        .fade-in-delay-6 { animation-delay: 1.2s; } /* Added for Banyu's card */
     </style>
 </head>
 <body class="text-gray-300">
@@ -135,6 +136,21 @@
                 </blockquote>
                 <a href="https://microdos2.github.io/lenas-story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
                     Read Lena's Full Story
+                </a>
+            </div>
+
+            <!-- Banyu's Story Card -->
+            <div class="card rounded-xl p-8 flex flex-col fade-in-delay-6">
+                <img src="imagebanyu.png" alt="Portrait of Banyu" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <h2 class="text-3xl font-bold text-white mb-3">Banyu's Blueprint for Clarity</h2>
+                <p class="text-gray-400 mb-6 flex-grow">
+                    A gifted architect, Banyu felt trapped by creative block, the city's vibrant energy turning into noise. Stalled on a prestigious project, he found a way to quiet the static and reconnect with his inspiration, leading to a brilliant design fusion of heritage and home.
+                </p>
+                <blockquote class="border-l-4 border-indigo-500 pl-4 text-gray-300 italic mb-6">
+                    "The static was gone. In its place: quiet confidence and a renewed connection to creativity."
+                </blockquote>
+                <a href="https://microdos2.github.io/Banyus-Story/" target="_blank" class="text-center w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                    Read Banyu's Full Story
                 </a>
             </div>
 
