--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <!-- Banyu's Story Card -->
             <div class="card rounded-xl p-8 flex flex-col fade-in-delay-6">
-                <img src="banyu.png" alt="Portrait of Banyu" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
+                <img src="Banyu.png" alt="Portrait of Banyu" class="rounded-lg mb-6 w-full h-64 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1f2937/9ca3af?text=Image+Not+Found';">
                 <h2 class="text-3xl font-bold text-white mb-3">Banyu's Blueprint for Clarity</h2>
                 <p class="text-gray-400 mb-6 flex-grow">
                     A gifted architect, Banyu felt trapped by creative block, the city's vibrant energy turning into noise. Stalled on a prestigious project, he found a way to quiet the static and reconnect with his inspiration, leading to a brilliant design fusion of heritage and home.
@@ -172,5 +172,6 @@
 
 </body>
 </html>
+
 
 
